k8s/xray/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:   
  name: xray
  labels:     
    name: prod
