k8s/xray/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xray-service
spec:
 type: NodePort
 ports:
  - port: 30666
    targetPort: 30666
    protocol: TCP
 selector:
     app: xray
