k8s/xray/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: xray-ingress
spec:
  entryPoints:
  - web
  routes:
  - match: HostSNI(`*`)
    services:
    - name: xray-service
      port: 30666
