k8s/xray/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xray-proxy
spec:
  hosts:
  - '*'
  gateways:
    - xray-gateway
  tcp:
  - match:
    - port: 32000
    route:
    - destination:
        host: xray-service.xray.svc.cluster.local
        port:
          number: 30666
